[tool.poetry]
name = "python-avanzado"
version = "0.1.0"
description = ""
authors = ["rho <rhosimani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
